Fix the single pixel point where neither of two paired images display with visibility helpers

--- a/curiositymachine/sass/utils/_utilities-responsive.scss
+++ b/curiositymachine/sass/utils/_utilities-responsive.scss
@@ -6,7 +6,7 @@
   .hidden-#{$bp}-min-down {
     $max: breakpoint-min($bp, $grid-breakpoints);
     @if $max {
-      @media (max-width: $max) {
+      @media (max-width: $max - 0.01em) {
         display: none !important;
       }
     } @else {
