--- a/curiositymachine/static/css/main.css
+++ b/curiositymachine/static/css/main.css
@@ -4671,19 +4671,19 @@ a.bg-danger:hover {
 .hidden-xs-min-down {
   display: none !important; }
 
-@media (max-width: 34em) {
+@media (max-width: 33.99em) {
   .hidden-sm-min-down {
     display: none !important; } }
 
-@media (max-width: 48em) {
+@media (max-width: 47.99em) {
   .hidden-md-min-down {
     display: none !important; } }
 
-@media (max-width: 62em) {
+@media (max-width: 61.99em) {
   .hidden-lg-min-down {
     display: none !important; } }
 
-@media (max-width: 75em) {
+@media (max-width: 74.99em) {
   .hidden-xl-min-down {
     display: none !important; } }
 
